syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/MaksKazantsev/Chatter/user/pkg";

service User {
  rpc Register(RegisterReq) returns(RegisterRes);
  rpc Login(LoginReq) returns(LoginRes);
  rpc SendCode(SendReq) returns(google.protobuf.Empty);
  rpc VerifyCode(VerifyReq) returns(VerifyRes);
  rpc Recovery(RecoveryReq) returns (google.protobuf.Empty);
  rpc UpdateToken(UpdateTokenReq) returns (UpdateTokenRes);
  rpc ParseToken(ParseTokenReq) returns (ParseTokenRes);

  rpc EditProfile(EditProfileReq) returns (google.protobuf.Empty);
  rpc SuggestFs(SuggestFsReq) returns (google.protobuf.Empty);
  rpc RefuseFs(RefuseFsReq) returns (google.protobuf.Empty);
  rpc AcceptFs(FsAction) returns (google.protobuf.Empty);
  rpc DeleteFriend(FsAction) returns (google.protobuf.Empty);
  rpc GetFriends(GetFsAction) returns (GetFriendsRes);
  rpc GetFs(GetFsAction) returns (GetFsRes);
}

message RegisterReq {
  string Username = 1;
  string Password = 2;
  string Email = 3;
}

message RegisterRes {
  string UUID = 1;
  string AccessToken = 2;
  string RefreshToken = 3;
}

message LoginReq {
  string Email = 1;
  string Password = 2;
}

message LoginRes {
  string AccessToken = 1;
  string RefreshToken = 2;
}

message SendReq {
  string Email = 1;
}

message VerifyReq {
  string Code = 1;
  string Email = 2;
  string Type = 3;
}

message VerifyRes {
  string AccessToken = 1;
  string RefreshToken = 2;
}

message RecoveryReq {
  string Email = 1;
  string Password = 2;
}

message UpdateTokenReq{
  string RToken = 1;
}

message UpdateTokenRes{
  string RToken = 1;
  string AToken = 2;
}
message ParseTokenReq{
  string Token = 1;
}
message ParseTokenRes{
  string UUID = 1;
}

message EditProfileReq {
  string Token = 1;
  string Avatar = 2;
  string Username = 3;
  google.protobuf.Timestamp Birthday = 6;
  string Bio = 7;
}

message SuggestFsReq {
  string Token = 1;
  string ReceiverID = 2;
}

message RefuseFsReq {
  string Token = 1;
  string SenderID = 2;
}
message GetFsAction {
  string Token = 1;
}

message GetFriendsRes {
  repeated Friend Friends = 1;
}

message Friend {
  string FriendID = 1;
  string Avatar = 2;
  string Username = 3;
}

message GetFsRes {
  repeated FsReq FsReqs = 1;
}
message FsReq {
  string ReqId = 1;
  string Avatar = 2;
  string Username = 3;
}
message FsAction {
  string Token = 1;
  string TargetID = 2;
}